キーボードのインプットクラス作成

--- a/4104.vcxproj
+++ b/4104.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="GameCore\DxlibManager.cpp" />
     <ClCompile Include="GameCore\FPS.cpp" />
     <ClCompile Include="GameCore\FrameWork.cpp" />
+    <ClCompile Include="GameCore\Input.cpp" />
     <ClCompile Include="Source\Util\GameConfig.cpp" />
     <ClCompile Include="Source\GameMain.cpp" />
     <ClCompile Include="Source\Scene\GameScene.cpp" />
@@ -171,6 +172,7 @@
   <ItemGroup>
     <ClInclude Include="GameCore\AbstractSceneFactory.h" />
     <ClInclude Include="GameCore\BaseScene.h" />
+    <ClInclude Include="GameCore\Input.h" />
     <ClInclude Include="Include\Util\Core.h" />
     <ClInclude Include="GameCore\DxlibManager.h" />
     <ClInclude Include="GameCore\FPS.h" />
