--- a/4104.vcxproj
+++ b/4104.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\Scene\SceneFactrory.cpp" />
     <ClCompile Include="GameCore\SceneManager.cpp" />
+    <ClCompile Include="Source\Util\Player.cpp" />
     <ClCompile Include="ThirdParty\imgui\imgui.cpp" />
     <ClCompile Include="ThirdParty\imgui\imgui_demo.cpp" />
     <ClCompile Include="ThirdParty\imgui\imgui_draw.cpp" />
@@ -184,6 +185,7 @@
     <ClInclude Include="GameCore\ImGuiManager.h" />
     <ClInclude Include="Include\Scene\SceneFactrory.h" />
     <ClInclude Include="GameCore\SceneManager.h" />
+    <ClInclude Include="Include\Util\Player.h" />
     <ClInclude Include="ThirdParty\imgui\imconfig.h" />
     <ClInclude Include="ThirdParty\imgui\imgui.h" />
     <ClInclude Include="ThirdParty\imgui\imgui_impl_dx11.h" />
