--- a/4104.vcxproj
+++ b/4104.vcxproj
@@ -88,7 +88,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\DxLib_VC\プロジェクトに追加すべきファイル_VC用;$(ProjectDir)\GameCore;$(ProjectDir)\Include\Scene;$(ProjectDir)\Include\Util;$(ProjectDir)\Include;$(ProjectDir)\ThirdParty\imgui</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\DxLib_VC\プロジェクトに追加すべきファイル_VC用;$(ProjectDir)\GameCore;$(ProjectDir)\Include\Scene;$(ProjectDir)\Include\Util;$(ProjectDir)\Include;$(ProjectDir)\ThirdParty\imgui;$(ProjectDir)\Include\Util\Player</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>Core.h</PrecompiledHeaderFile>
@@ -154,6 +154,7 @@
     <ClCompile Include="GameCore\FPS.cpp" />
     <ClCompile Include="GameCore\FrameWork.cpp" />
     <ClCompile Include="GameCore\Input.cpp" />
+    <ClCompile Include="Source\Util\Player\PlayerAttackFist.cpp" />
     <ClCompile Include="Source\Util\GameConfig.cpp" />
     <ClCompile Include="Source\GameMain.cpp" />
     <ClCompile Include="Source\Scene\GameScene.cpp" />
@@ -161,7 +162,8 @@
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\Scene\SceneFactrory.cpp" />
     <ClCompile Include="GameCore\SceneManager.cpp" />
-    <ClCompile Include="Source\Util\Player.cpp" />
+    <ClCompile Include="Source\Util\GameScene.cpp" />
+    <ClCompile Include="Source\Util\Player\Player.cpp" />
     <ClCompile Include="ThirdParty\imgui\imgui.cpp" />
     <ClCompile Include="ThirdParty\imgui\imgui_demo.cpp" />
     <ClCompile Include="ThirdParty\imgui\imgui_draw.cpp" />
@@ -185,8 +187,9 @@
     <ClInclude Include="GameCore\ImGuiManager.h" />
     <ClInclude Include="Include\Scene\SceneFactrory.h" />
     <ClInclude Include="GameCore\SceneManager.h" />
-    <ClInclude Include="Include\Util\Player.h" />
-    <ClInclude Include="Include\Util\PlayerAttack.h" />
+    <ClInclude Include="Include\Util\Player\Player.h" />
+    <ClInclude Include="Include\Util\Player\PlayerAttack.h" />
+    <ClInclude Include="Include\Util\Player\PlayerAttackFist.h" />
     <ClInclude Include="ThirdParty\imgui\imconfig.h" />
     <ClInclude Include="ThirdParty\imgui\imgui.h" />
     <ClInclude Include="ThirdParty\imgui\imgui_impl_dx11.h" />
