--- a/4104.vcxproj.filters
+++ b/4104.vcxproj.filters
@@ -84,7 +84,13 @@
     <ClCompile Include="GameCore\Input.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Util\Player.cpp">
+    <ClCompile Include="Source\Util\Player\Player.cpp">
+      <Filter>ソース ファイル\player</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Util\GameScene.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Util\Player\PlayerAttackFist.cpp">
       <Filter>ソース ファイル\player</Filter>
     </ClCompile>
   </ItemGroup>
@@ -149,10 +155,13 @@
     <ClInclude Include="GameCore\Input.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Util\Player.h">
+    <ClInclude Include="Include\Util\Player\Player.h">
       <Filter>ヘッダー ファイル\player</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Util\PlayerAttack.h">
+    <ClInclude Include="Include\Util\Player\PlayerAttack.h">
+      <Filter>ヘッダー ファイル\player</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\Util\Player\PlayerAttackFist.h">
       <Filter>ヘッダー ファイル\player</Filter>
     </ClInclude>
   </ItemGroup>
