--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -13,5 +13,15 @@ Pos=0,0
 Size=870,496
 Collapsed=0
 
+[Window][SelectView]
+Pos=870,0
+Size=201,201
+Collapsed=0
+
+[Window][Select]
+Pos=870,201
+Size=201,295
+Collapsed=0
+
 [Docking][Data]
 
