--- a/Editor/4104.vcxproj.filters
+++ b/Editor/4104.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="Source\Util\Vec2.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Util\Graph.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\ThirdParty\imgui\imgui.h">
@@ -143,7 +146,10 @@
     <ClInclude Include="Include\Util\Vec2.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="Include\ChipIndex.h">
+    <ClInclude Include="Include\Util\ChipIndex.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\Util\Graph.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
