--- a/4104.vcxproj.filters
+++ b/4104.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClCompile Include="Source\Util\Math\Vector3.cpp">
       <Filter>ソース ファイル\Math</Filter>
     </ClCompile>
+    <ClCompile Include="IEnemy.cpp">
+      <Filter>ソース ファイル\Enemy</Filter>
+    </ClCompile>
     <ClCompile Include="Source\Util\Player\PlayerAttackWeapon.cpp">
       <Filter>ソース ファイル\player</Filter>
     </ClCompile>
@@ -193,6 +196,9 @@
     </ClInclude>
     <ClInclude Include="Include\Util\Math\Vector3.h">
       <Filter>ヘッダー ファイル\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="IEnemy.h">
+      <Filter>ヘッダー ファイル\Enemy</Filter>
     </ClInclude>
     <ClInclude Include="Include\Util\Player\PlayerAttackWeapon.h">
       <Filter>ヘッダー ファイル\player</Filter>
