--- a/4104.vcxproj
+++ b/4104.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="GameCore\FPS.cpp" />
     <ClCompile Include="GameCore\FrameWork.cpp" />
     <ClCompile Include="GameCore\Input.cpp" />
+    <ClCompile Include="IEnemy.cpp" />
     <ClCompile Include="Source\Util\Player\PlayerAttackFist.cpp" />
     <ClCompile Include="Source\Util\GameConfig.cpp" />
     <ClCompile Include="Source\GameMain.cpp" />
@@ -178,6 +179,7 @@
     <ClInclude Include="GameCore\AbstractSceneFactory.h" />
     <ClInclude Include="GameCore\BaseScene.h" />
     <ClInclude Include="GameCore\Input.h" />
+    <ClInclude Include="IEnemy.h" />
     <ClInclude Include="Include\Util\Core.h" />
     <ClInclude Include="GameCore\DxlibManager.h" />
     <ClInclude Include="GameCore\FPS.h" />
