二つ目(仮)を作って変更できるかの確認

--- a/4104.vcxproj
+++ b/4104.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="Source\Scene\SceneFactrory.cpp" />
     <ClCompile Include="GameCore\SceneManager.cpp" />
     <ClCompile Include="Source\Util\Player\Player.cpp" />
+    <ClCompile Include="Source\Util\Player\PlayerAttackWeapon.cpp" />
     <ClCompile Include="ThirdParty\imgui\imgui.cpp" />
     <ClCompile Include="ThirdParty\imgui\imgui_demo.cpp" />
     <ClCompile Include="ThirdParty\imgui\imgui_draw.cpp" />
@@ -191,6 +192,7 @@
     <ClInclude Include="Include\Util\Player\Player.h" />
     <ClInclude Include="Include\Util\Player\PlayerAttack.h" />
     <ClInclude Include="Include\Util\Player\PlayerAttackFist.h" />
+    <ClInclude Include="Include\Util\Player\PlayerAttackWeapon.h" />
     <ClInclude Include="ThirdParty\imgui\imconfig.h" />
     <ClInclude Include="ThirdParty\imgui\imgui.h" />
     <ClInclude Include="ThirdParty\imgui\imgui_impl_dx11.h" />
