プレイヤーの攻撃仕様変更

--- a/4104.vcxproj
+++ b/4104.vcxproj
@@ -107,7 +107,8 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\DxLib_VC\プロジェクトに追加すべきファイル_VC用</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\DxLib_VC\プロジェクトに追加すべきファイル_VC用;$(ProjectDir)Include;$(ProjectDir)Include\Scene;$(ProjectDir)Include\Util;$(ProjectDir)GameCore;$(ProjectDir)Include\Util\Player;$(ProjectDir)Include\Util\Math</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
