--- a/4104.vcxproj
+++ b/4104.vcxproj
@@ -105,6 +105,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Enemy\FlyEnemy.cpp" />
     <ClCompile Include="Source\Collision\CircleShape.cpp" />
     <ClCompile Include="Source\Collision\CollisionManager.cpp" />
     <ClCompile Include="Source\Collision\Collision.cpp" />
@@ -145,6 +146,7 @@
     <ClCompile Include="Source\Enemy\WalkEnemy.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Include\Enemy\FlyEnemy.h" />
     <ClInclude Include="Include\Collision\CircleShape.h" />
     <ClInclude Include="Include\Collision\CollisionConfig.h" />
     <ClInclude Include="Include\Collision\CollisionManager.h" />
