--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -25,7 +25,17 @@ Collapsed=0
 
 [Window][MenuView]
 Pos=1071,0
-Size=201,496
+Size=201,201
+Collapsed=0
+
+[Window][MapSelectView]
+Pos=1071,201
+Size=201,147
+Collapsed=0
+
+[Window][RoomSelectView]
+Pos=1071,348
+Size=201,148
 Collapsed=0
 
 [Docking][Data]
