--- a/4104.vcxproj
+++ b/4104.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="Source\Util\Math\Vector2.cpp" />
     <ClCompile Include="Source\Util\Math\Vector3.cpp" />
     <ClCompile Include="Source\Enemy\WalkEnemy.cpp" />
+    <ClCompile Include="Source\Util\Util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\Enemy\EnemyManager.h" />
@@ -188,6 +189,7 @@
     <ClInclude Include="Include\Util\Math\Vector2.h" />
     <ClInclude Include="Include\Util\Math\Vector3.h" />
     <ClInclude Include="Include\Enemy\WalkEnemy.h" />
+    <ClInclude Include="Include\Util\Util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
