--- a/4104.vcxproj
+++ b/4104.vcxproj
@@ -107,6 +107,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Base\BaseEnemy.cpp" />
     <ClCompile Include="Source\Enemy\EnemyManager.cpp" />
     <ClCompile Include="Source\Enemy\FlyEnemy.cpp" />
     <ClCompile Include="Source\Base\BaseObject.cpp" />
@@ -119,9 +120,7 @@
     <ClCompile Include="GameCore\FPS.cpp" />
     <ClCompile Include="GameCore\FrameWork.cpp" />
     <ClCompile Include="GameCore\Input.cpp" />
-    <ClCompile Include="Source\Enemy\BaseEnemy.cpp" />
     <ClCompile Include="Include\Util\Player\PlayerBullet.cpp" />
-    <ClCompile Include="Source\Enemy\BaseEnemy.cpp" />
     <ClCompile Include="Source\Collision\IObject.cpp" />
     <ClCompile Include="Source\Collision\IShape.cpp" />
     <ClCompile Include="Source\Collision\RectShape.cpp">
