--- a/Resources/Config/Config.json
+++ b/Resources/Config/Config.json
@@ -1,6 +1,6 @@
 {
     "name": "Config",
-    "Title": "Config",
+    "Title": "4104_Eternal Damnation",
     "WindowSize": [
         1280,
         704
@@ -13,4 +13,4 @@
     "VSync":true,
     "FPS":60,
     "FullScreen":false
-}
+}W
